--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-aiohttp==3.8.3
+aiohttp==3.12.0
+keras==3.10.0
+numpy==2.3.1
+opencv_python==4.11.0.86
 python-socketio==5.13.0
-numpy==1.23.4
-opencv_python==4.7.0.68
